Changelog of Jail

Alpha0.2.3
- Fixed '/votejail' command not working for normal players
- Added 'jail.uuidcheck.bypass' permission

Alpha0.2.2
- Added an option to disable timer GUI on prisoners in config
- Updated README.md for Github
- Added '/votejail' cmd, allowing players to vote someone who behaves badly
- Fixed loading message of compatible economy plugin
- Fixed /tpjail command and tpJail() not working
- Code cleanup
- Added UUID Checker

Alpha0.2.1
- Added Russian #5
- Redefined language keys
- Added more translatable messages

Alpha0.2
- Added more languages #2
- Various bug fixes

Alpha0.1.1
- Added some missing PHPDoc
- Removed unused code
- Resolved mobile incompatibility to update checker
- Resolved internet connectivity issue to update checker

Alpha0.1
- Hugely improved and enhanced auto update checker/installer (config)
- Implemented bail support for PocketMoney
- Added an option to disable bail
- Fixed some typos
- Implemented bail money requirement on prisoner's GUI
- Fixed server crash when player is jailed infinitely

Pre-alpha0.7
- Added basic version update fetcher

Pre-alpha0.6
- Fixed license text incorrect plugin name
- Added op being jailed prevention (Can be deactivated in config)
- Added basic bail feature, currently only supports EconomyS (/bail)

Pre-alpha0.5
- Fixed infinite time jailing pops errors on console screen
- Fixed players infinite time still receive time penalty

Pre-alpha0.4
- Fixed auto timer unjailing not taking effect (CRITICAL)

Pre-alpha0.3
- Fixed error code appearing when new players join
- Fixed some missing PHP Docs of API
- Fixed gamemode issue while offline unjailed players join
- Added the ability to jail players forever until /unjail command
- Added penalty system, apply to prisoners if they try to destroy the jail

Pre-alpha0.2
- Fixed jailExists() detection error when player joins
- Fixed some displays not shown clearly
- Added switchjail command
- Added offline-time-counting option in configuration